--- a/serviceReport/index.html
+++ b/serviceReport/index.html
@@ -56,7 +56,7 @@
     <meta property="og:title" content="Inventory Management Project" />
     <meta property="og:url" content="https://shubhams1401-sawant.github.io/" />
     <meta property="og:description" content="Inventory Management Project By Shubham Sawant" />
-    <meta property="og:image" content="icon.png" />
+    <meta property="og:image" content="https://shubhams1401-sawant.github.io/inventoryManagement/serviceReport/icon.png" />
     <!-- og tags -->
     <!-- css styles-->
     <link rel="stylesheet" href="https://shubhams1401-sawant.github.io/covid19/source/css/main.css">
@@ -70,7 +70,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- JS script -->
     <!-- favicon -->
-    <link rel="shortcut icon" href="icon.png">
+    <link rel="shortcut icon" href="https://shubhams1401-sawant.github.io/inventoryManagement/serviceReport/icon.png">
     <!-- favicon -->
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@1,700&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
