--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <td colspan="3" id="feedback_heading"><img src="9.png" alt="noImageFound"></td>
             </tr>
             <tr style="display: flex; justify-content: center;">
-              <td colspan="3" id="feedback_heading"><img src="10.png" alt="noImageFound"></td>
+              <td colspan="3" id="feedback_heading"><img src="10..png" alt="noImageFound"></td>
             </tr>
             
         </table>
